OO-8079, OO-6080: Improve assessment release process
Default user visibility is null and is initialized when the first
assessment data is saved. Participant sees the assessment data
independent of the assessment status (user visibility is single flag).
Optimisation of the assessment form.
Merge all performance summary views to a single controller.